a11y: unref selected item only if it is not NULL

https://bugzilla.gnome.org/show_bug.cgi?id=733610